--- a/hypr/std_hyprland.conf
+++ b/hypr/std_hyprland.conf
@@ -4,11 +4,16 @@ exec-once = ~/.config/autostart.sh
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
+
 # Set programs that you use
 $terminal = alacritty
 $fileManager = dolphin
 $menu = wofi --show drun
 $browser = firefox
+$bluetooth = blueman-manager
+$network = nm-connection-editor
+$printer = system-config-printer
+$powermanager = tlpui
 
 # Some default env vars.
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
@@ -73,10 +78,10 @@ decoration {
 
     blur {
         enabled = true
-        size = 7
-        passes = 9
+        size = 10
+        passes = 8
 	  
-    vibrancy = 1.0
+    vibrancy = 4.0
 	  vibrancy_darkness = 1.0
 	  popups = true
     
@@ -103,7 +108,7 @@ animations {
     animation = fadeSwitch, 1, 5, workspacecurve
 
     animation = workspaces, 1, 5, workspacecurve, slidevert
-    animation = specialWorkspace, 1, 5, windowcurve, fade, popin 40%
+    animation = specialWorkspace, 1, 9, windowcurve, fade, popin 0%
 }
 
 dwindle {
@@ -195,7 +200,8 @@ bind = ALT, S, workspace, 5
 bind = ALT, X, workspace, 6
 bind = ALT, R, togglespecialworkspace, scratchpad
 bind = ALT, F, togglespecialworkspace, term
-bind = ALT, V, togglespecialworkspace, minimize
+bind = ALT, V, togglespecialworkspace, settings
+bind = ALT, M, togglespecialworkspace, minimize
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = ALT SHIFT, Q, movetoworkspace, 1
@@ -231,4 +237,5 @@ workspace = 5, monitor:HDMI-A-2, persistent:true
 workspace = 6, monitor:HDMI-A-2, persistent:true
 
 workspace = special:term, on-created-empty:[float] $terminal
-workspace = special:scratchpad, gaps_out:125
+workspace = special:scratchpad, gapsout:125
+workspace = special:settings, gapsout:50, on-created-empty: $bluetooth & $network & $printer
