themed file manager and settings apps

--- a/tlpui/tlpui.cfg
+++ b/tlpui/tlpui.cfg
@@ -2,7 +2,7 @@
 language = en_EN
 activeoption = 0
 activecategory = 9
-activeposition = 502.85506204451906
-windowxsize = 960
-windowysize = 1280
+activeposition = 0.0
+windowxsize = 1541
+windowysize = 1180
 
