--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -9,7 +9,7 @@ source = ~/.config/hypr/monitors.conf
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = wofi --show drun
 $browser = firefox
 $bluetooth = blueman-manager
@@ -25,6 +25,9 @@ env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 # Customize Cursor
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_SIZE,24
+
+# Export GTK Theme
+env = GTK_THEME,WhiteSur-Dark
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
