--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,12 +6,11 @@ exec-once = ~/.config/autostart.sh
 # Edit with nwg-displays
 source = ~/.config/hypr/monitors.conf
 
-
 # Set programs that you use
 $terminal = alacritty
 $fileManager = nautilus
 $menu = wofi --show drun
-$browser = firefox
+$browser = chromium --enable-features=UseOzonePlatform --ozone-platform=wayland
 $bluetooth = blueman-manager
 $network = nm-connection-editor
 $printer = system-config-printer
@@ -25,6 +24,9 @@ env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 # Customize Cursor
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_SIZE,24
+
+# Customize Screenshot utility
+env = SLURP_ARGS, -c FFFFFF33 -w 3
 
 # Export GTK Theme
 env = GTK_THEME,WhiteSur-Dark
@@ -69,8 +71,8 @@ decoration {
     rounding = 10
 
     # Set opacity settings
-    active_opacity = 0.96
-    inactive_opacity = 0.93
+    active_opacity = 0.98
+    inactive_opacity = 0.96
     fullscreen_opacity = 1.0
 
     # Set shadow settings
@@ -85,12 +87,12 @@ decoration {
 
     blur {
         enabled = true
-        size = 10
-        passes = 8
+        size = 7
+        passes = 3
 	  
-    vibrancy = 4.0
-	  vibrancy_darkness = 1.0
-	  popups = true
+        vibrancy = 0.0
+	      vibrancy_darkness = 1.0
+	      popups = false
     
     }
 }
@@ -101,21 +103,21 @@ animations {
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = default, 0.05, 0.9, 0.1, 1.05
-    bezier = windowcurve, 0, 0.8, 0.1, 1
-    bezier = workspacecurve, 0.3, 0, 0.56, 1.0
+    bezier = snappycurve, 0, 1.0, 0.1, 1.1
+    bezier = smoothcurve, 0.3, 0, 0.56, 1.0
 
-    animation = windows, 1, 4, windowcurve, slide
-    animation = windowsOut, 1, 9, windowcurve, slide
+    animation = windows, 1, 2, snappycurve, slide
+    animation = windowsOut, 1, 9, snappycurve, slide
 
     animation = border, 0
     animation = borderangle, 0
 
-    animation = fade, 0, 1, windowcurve
-    animation = fadeOut, 1, 9, windowcurve
-    animation = fadeSwitch, 1, 5, workspacecurve
+    animation = fade, 0, 1, snappycurve
+    animation = fadeOut, 1, 9, snappycurve
+    animation = fadeSwitch, 1, 5, smoothcurve
 
-    animation = workspaces, 1, 5, workspacecurve, slidevert
-    animation = specialWorkspace, 1, 9, windowcurve, fade, popin 0%
+    animation = workspaces, 1, 4, snappycurve, slidevert
+    animation = specialWorkspace, 1, 8, snappycurve, fade, popin 0%
 }
 
 dwindle {
@@ -184,6 +186,10 @@ bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 
+# Cycle Monitors
+bind = $mainMod, Tab, focusmonitor, +1
+bind = $mainMod SHIFT, Tab, focusmonitor, -1
+
 # Fullscreen a window
 bind = $mainMod, M, fullscreen
 
@@ -231,6 +237,9 @@ bind = $mainMod SHIFT CTRL, backslash, exec, shutdown now
 
 # Activate the color picker
 bind = $mainMod, P, exec, hyprpicker -a
+
+# Take a screenshot
+bind = $mainMod SHIFT, S, exec, grimblast --freeze copysave area
 
 # Move active window to previous or next workspace on a monitor
 bind = ALT, down, workspace, m+1
