--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,12 +1,12 @@
 # Execute your favorite apps at launch
-exec-once = ~/.config/autostart.sh
+exec-once = ~/.config/scripts/autostart.sh
 
 # Some default env vars.
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
 # Customize Cursor
-env = HYPRCURSOR_SIZE,24
 env = XCURSOR_SIZE,24
+env = XCURSOR_THEME, macOS
 
 # Customize Screenshot utility
 env = SLURP_ARGS, -c FFFFFF33 -w 3
@@ -16,8 +16,7 @@ env = GTK_THEME,WhiteSur-Dark
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = nautilus
-$menu = wofi --show drun
+$filemanager = nautilus
 $browser = chromium --enable-features=UseOzonePlatform --ozone-platform=wayland
 $bluetooth = blueman-manager
 $network = nm-connection-editor
@@ -25,6 +24,7 @@ $printer = system-config-printer
 $powermanager = tlpui
 $monitormanager = nwg-displays
 $volumemanager = pavucontrol
+$settingseditor = dconf-editor
 
 $mainMod = SUPER
 
@@ -40,8 +40,11 @@ source = ~/.config/hypr/variables.conf
 # Source windowrules config file
 source = ~/.config/hypr/windowrules.conf
 
+# Source workspaces config file
+source = ~/.config/hypr/workspaces.conf
+
+# Source scratchpad config file
+source = ~/.config/hypr/scratchpads.conf
+
 # Source keybinds config file
 source = ~/.config/hypr/binds.conf
-
-# Source workspace config file
-source = ~/.config/hypr/workspaces.conf
