--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -2,7 +2,7 @@
 bind = $mainMod, A, exec, $terminal
 bind = $mainMod, X, killactive, 
 bind = $mainMod SHIFT, backslash, exit, 
-bind = $mainMod, F, exec, $fileManager
+bind = $mainMod, F, exec, $filemanager
 bind = $mainMod, G, togglefloating, 
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, B, exec, $browser
@@ -33,6 +33,9 @@ bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 
+# Kill settings applications (save RAM)
+bind = $mainMod SHIFT, X, exec, killall $bluetooth $network $printer.py $powermanager $monitormanager $volumemanager $settingseditor
+
 # Switch workspaces with mainMod + [0-9]
 bind = ALT, Q, workspace, 1
 bind = ALT, A, workspace, 2
@@ -47,6 +50,7 @@ bind = ALT, T, togglespecialworkspace, scratchpad
 bind = ALT, space, togglespecialworkspace, term
 bind = ALT, B, togglespecialworkspace, minimize
 
+
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = ALT SHIFT, Q, movetoworkspace, 1
 bind = ALT SHIFT, A, movetoworkspace, 2
@@ -57,6 +61,7 @@ bind = ALT SHIFT, S, movetoworkspace, 6
 bind = ALT SHIFT, R, movetoworkspacesilent, special:scratchpad
 bind = $mainMod SHIFT, B, movetoworkspacesilent, special:minimize
 bind = $mainMod SHIFT, N, movetoworkspace, previous
+
 
 # Activate the lock screen
 bind = $mainMod, backslash, exec, hyprlock
