--- a/hypr/variables.conf
+++ b/hypr/variables.conf
@@ -39,7 +39,7 @@ decoration {
 
     # Set opacity settings
     active_opacity = 0.98
-    inactive_opacity = 0.96
+    inactive_opacity = 0.95
     fullscreen_opacity = 1.0
 
     # Set shadow settings
@@ -50,7 +50,7 @@ decoration {
     col.shadow_inactive = rgba(1a1a1a66)
     
     # Dim background when special workspace is activated
-    dim_special = 0.6
+    dim_special = 0.4
 
     blur {
         enabled = true
@@ -75,6 +75,7 @@ animations {
 
     animation = windows, 1, 2, snappycurve, slide
     animation = windowsOut, 1, 9, snappycurve, slide
+    animation = windowsMove, 1, 4, snappycurve, slide
 
     animation = border, 0
     animation = borderangle, 0
@@ -82,9 +83,10 @@ animations {
     animation = fade, 0, 1, snappycurve
     animation = fadeOut, 1, 9, snappycurve
     animation = fadeSwitch, 1, 5, smoothcurve
+    animation = fadeDim, 4, smoothcurve
 
     animation = workspaces, 1, 4, snappycurve, slidevert
-    animation = specialWorkspace, 1, 3, snappycurve, slidevert
+    animation = specialWorkspace, 1, 8, snappycurve, fade, popin 0%
 }
 
 dwindle {
