--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,5 +1,6 @@
 # Execute your favorite apps at launch
 exec-once = ~/.config/scripts/autostart.sh
+exec-once = hyprpm reload
 
 # Some default env vars.
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
@@ -30,6 +31,9 @@ $mainMod = SUPER
 
 # Source Config Files
 
+# Source plugin config file
+source = ~/.config/hypr/plugins.conf
+
 # Source the monitor config file
 # Edit with nwg-displays
 source = ~/.config/hypr/monitors.conf
@@ -48,3 +52,4 @@ source = ~/.config/hypr/scratchpads.conf
 
 # Source keybinds config file
 source = ~/.config/hypr/binds.conf
+
