--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -8,6 +8,7 @@ shell = '/bin/fish'
 
 # Set padding
 [window]
+dimensions = { columns = 150, lines = 40 }
 padding = { x = 5, y = 5 }
 dynamic_padding = true
 
@@ -17,7 +18,7 @@ normal.family = 'SFMono'
 bold.family = 'SFMono'
 italic.family = 'SFMono'
 bold_italic.family = 'SFMono'
-size = 12
+size = 11
 
 [cursor]
 style = { shape = 'Beam', blinking = 'On' }
