--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -1,7 +1,6 @@
 # See https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, A, exec, $terminal
 bind = $mainMod, X, killactive, 
-bind = $mainMod SHIFT, backslash, exit, 
 bind = $mainMod, F, exec, $filemanager
 bind = $mainMod, G, togglefloating, 
 bind = $mainMod, R, exec, $menu
@@ -25,10 +24,11 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod SHIFT, mouse:272, resizewindow
 
 # Adjust volume / brightness with keys
-bind = , XF86MonBrightnessUp, exec, change_brightness.py +
-bind = , XF86MonBrightnessDown, exec, change_brightness.py -
-bind = CTRL, Up, exec, change_brightness.py +
-bind = CTRL, Down, exec, change_brightness.py -
+bind = , XF86MonBrightnessUp, exec, /usr/bin/change_brightness +
+bind = , XF86MonBrightnessDown, exec, /usr/bin/change_brightness -
+bind = CTRL, Up, exec, /usr/bin/change_brightness + 
+bind = CTRL, Down, exec, /usr/bin/change_brightness - 
+
 bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
@@ -36,47 +36,39 @@ bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 # Kill settings applications (save RAM)
 bind = $mainMod SHIFT, X, exec, killall $bluetooth $network $printer.py $powermanager $monitormanager $volumemanager $settingseditor
 
-# Switch workspaces with mainMod + [0-9]
-bind = ALT, Q, workspace, 1
-bind = ALT, A, workspace, 2
-bind = ALT, Z, workspace, 3
-bind = ALT, W, workspace, 4
-bind = ALT, S, workspace, 5
-bind = ALT, X, workspace, 6
-bind = ALT, R, togglespecialworkspace, settings1
-bind = ALT, F, togglespecialworkspace, settings2
-bind = ALT, V, togglespecialworkspace, settings3
-bind = ALT, T, togglespecialworkspace, scratchpad
-bind = ALT, space, togglespecialworkspace, term
-bind = ALT, B, togglespecialworkspace, minimize
+# Switch workspaces with mainMod + [1-3]
+bind = $mainMod, 1, split:workspace, 1
+bind = $mainMod, 2, split:workspace, 2
+bind = $mainMod, 3, split:workspace, 3
+bind = $mainMod, Q, togglespecialworkspace, settings1
+bind = $mainMod, W, togglespecialworkspace, settings2
+bind = $mainMod, E, togglespecialworkspace, settings3
+bind = $mainMod, R, togglespecialworkspace, scratchpad
+bind = $mainMod, space, togglespecialworkspace, term
 
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = ALT SHIFT, Q, movetoworkspace, 1
-bind = ALT SHIFT, A, movetoworkspace, 2
-bind = ALT SHIFT, Z, movetoworkspace, 3
-bind = ALT SHIFT, W, movetoworkspace, 4
-bind = ALT SHIFT, S, movetoworkspace, 5
-bind = ALT SHIFT, S, movetoworkspace, 6
-bind = ALT SHIFT, R, movetoworkspacesilent, special:scratchpad
-bind = $mainMod SHIFT, B, movetoworkspacesilent, special:minimize
-bind = $mainMod SHIFT, N, movetoworkspace, previous
+# Move active window to a workspace with mainMod + SHIFT + [1-3]
+bind = $mainMod SHIFT, 1, split:movetoworkspace, 1
+bind = $mainMod SHIFT, 2, split:movetoworkspace, 2
+bind = $mainMod SHIFT, 3, split:movetoworkspace, 3
+bind = $mainMod SHIFT, R, split:movetoworkspacesilent, special:scratchpad
 
 
-# Activate the lock screen
-bind = $mainMod, backslash, exec, hyprlock
-bind = $mainMod SHIFT CTRL, backslash, exec, shutdown now
+# Lock / Power off the laptop
+bind = $mainMod, P, exec, hyprlock
+bind = $mainMod SHIFT, , exit, 
+bind = $mainMod CTRL, P, exec, shutdown now
 
 # Activate the color picker
-bind = $mainMod, P, exec, hyprpicker -a
+bind = $mainMod, C, exec, hyprpicker -a
 
 # Take a screenshot
-bind = $mainMod SHIFT, S, exec, grimblast --freeze copysave area
+bind = $mainMod SHIFT, S, exec, /usr/bin/grimblast --freeze copysave area
 
 # Move active window to previous or next workspace on a monitor
-bind = ALT, down, workspace, m+1
-bind = ALT, up, workspace, m-1
+bind = $mainMod, down, split:workspace, m+1
+bind = $mainMod, up, split:workspace, m-1
 
-bind = $mainMod SHIFT, up, movetoworkspace, m-1
-bind = $mainMod SHIFT, down, movetoworkspace, m+1
+bind = $mainMod SHIFT, up, split:movetoworkspace, m-1
+bind = $mainMod SHIFT, down, split:movetoworkspace, m+1
 
