--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -29,8 +29,8 @@ bind = , XF86MonBrightnessDown, exec, /usr/bin/change_brightness -
 bind = CTRL, Up, exec, /usr/bin/change_brightness + 
 bind = CTRL, Down, exec, /usr/bin/change_brightness - 
 
-bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
-bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5% && pactl get-sink-volume @DEFAULT_SINK@ | awk 'NR==1{print substr($5,1,length($5)-1)}' > /tmp/wobpipe
+bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5% && pactl get-sink-volume @DEFAULT_SINK@ | awk 'NR==1{print substr($5,1,length($5)-1)}' > /tmp/wobpipe
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 
 # Kill settings applications (save RAM)
