--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -29,8 +29,8 @@ bind = , XF86MonBrightnessDown, exec, /usr/bin/change_brightness -
 bind = CTRL, Up, exec, /usr/bin/change_brightness + 
 bind = CTRL, Down, exec, /usr/bin/change_brightness - 
 
-bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5% && pactl get-sink-volume @DEFAULT_SINK@ | awk 'NR==1{print substr($5,1,length($5)-1)}' > /tmp/wobpipe
-bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5% && pactl get-sink-volume @DEFAULT_SINK@ | awk 'NR==1{print substr($5,1,length($5)-1)}' > /tmp/wobpipe
+bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5% && pactl get-sink-volume @DEFAULT_SINK@ | awk 'NR==1{print substr($5,1,length($5)-1)}' > $WOBPIPE
+bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5% && pactl get-sink-volume @DEFAULT_SINK@ | awk 'NR==1{print substr($5,1,length($5)-1)}' > $WOBPIPE
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 
 # Kill settings applications (save RAM)
@@ -56,7 +56,7 @@ bind = $mainMod SHIFT, R, split:movetoworkspacesilent, special:scratchpad
 
 # Lock / Power off the laptop
 bind = $mainMod, P, exec, hyprlock
-bind = $mainMod SHIFT, , exit, 
+bind = $mainMod SHIFT, P, exit
 bind = $mainMod CTRL, P, exec, shutdown now
 
 # Activate the color picker
