--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,10 +1,3 @@
-# Execute your favorite apps at launch
-exec-once = ~/.config/scripts/autostart.sh
-exec-once = hyprpm reload
-
-# Some default env vars.
-env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
-
 # Customize Cursor
 env = XCURSOR_SIZE,24
 env = XCURSOR_THEME, macOS
@@ -12,8 +5,25 @@ env = XCURSOR_THEME, macOS
 # Customize Screenshot utility
 env = SLURP_ARGS, -c FFFFFF33 -w 3
 
+# Fixes cursor issues
+env = WLR_NO_HARDWARE_CURSORS, 1
+
 # Export GTK Theme
 env = GTK_THEME,WhiteSur-Dark
+
+# Define Wobpipe location
+env = WOBPIPE, /home/james/.local/share/wobpipe
+
+# Define Config Dir
+$config = /home/james/.config
+
+# Execute your favorite apps at launch
+exec-once = $config/scripts/autostart.sh
+exec-once = hyprpm reload
+
+# Some default env vars.
+env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
+
 
 # Set programs that you use
 $terminal = alacritty
@@ -32,24 +42,24 @@ $mainMod = SUPER
 # Source Config Files
 
 # Source plugin config file
-source = ~/.config/hypr/plugins.conf
+source = $config/hypr/plugins.conf
 
 # Source the monitor config file
 # Edit with nwg-displays
-source = ~/.config/hypr/monitors.conf
+source = $config/hypr/monitors.conf
 
 # Source Hyprland variables config file
-source = ~/.config/hypr/variables.conf
+source = $config/hypr/variables.conf
 
 # Source windowrules config file
-source = ~/.config/hypr/windowrules.conf
+source = $config/hypr/windowrules.conf
 
 # Source workspaces config file
-source = ~/.config/hypr/workspaces.conf
+source = $config/hypr/workspaces.conf
 
 # Source scratchpad config file
-source = ~/.config/hypr/scratchpads.conf
+source = $config/hypr/scratchpads.conf
 
 # Source keybinds config file
-source = ~/.config/hypr/binds.conf
+source = $config/hypr/binds.conf
 
