--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -29,8 +29,8 @@ input-field {
     dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
     dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(e69c4e)
-    inner_color = rgb(f5b571)
+    outer_color = rgb(d1d1d6)
+    inner_color = rgb(F2F2F7)
     font_color = rgb(10, 10, 10)
     fade_on_empty = true
     fade_timeout = 200 # Milliseconds before fade_on_empty is triggered.
