--- a/hypr/variables.conf
+++ b/hypr/variables.conf
@@ -30,7 +30,14 @@ general {
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    cursor_inactive_timeout = 1
+}
+
+cursor {
+
+    inactive_timeout = 1
+    # Keyboard input hides the cursor
+    hide_on_touch = true
+
 }
 
 decoration {
@@ -38,16 +45,16 @@ decoration {
     rounding = 10
 
     # Set opacity settings
-    active_opacity = 0.98
-    inactive_opacity = 0.95
+    active_opacity = 0.90
+    inactive_opacity = 0.86
     fullscreen_opacity = 1.0
 
     # Set shadow settings
     drop_shadow = yes
-    shadow_range = 8
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1a99)
-    col.shadow_inactive = rgba(1a1a1a66)
+    shadow_range = 25
+    shadow_render_power = 2
+    col.shadow = rgba(08080865)
+    col.shadow_inactive = rgba(08080833)
     
     # Dim background when special workspace is activated
     dim_special = 0.4
@@ -84,6 +91,7 @@ animations {
     animation = fadeOut, 1, 9, snappycurve
     animation = fadeSwitch, 1, 5, smoothcurve
     animation = fadeDim, 4, smoothcurve
+    animation = fadeShadow, 1, 3, smoothcurve
 
     animation = workspaces, 1, 4, snappycurve, slidevert
     animation = specialWorkspace, 1, 8, snappycurve, fade, popin 0%
@@ -111,8 +119,6 @@ misc {
     mouse_move_enables_dpms = true
     key_press_enables_dpms = true
 
-    # Keyboard input hides the cursor
-    hide_cursor_on_touch = true
 
     # Set the background color before the wallpaper is rendered
     background_color = 0x000000
