--- a/hypr/windowrules.conf
+++ b/hypr/windowrules.conf
@@ -7,3 +7,4 @@
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = float, class:(nm-connection-editor),title:(Editing)(.*)
 windowrulev2 = float, class:(chromium), title:(Save File)(.*)
+windowrule = focusonactivate, Alacritty
