beginning ags config

--- a/hypr/variables.conf
+++ b/hypr/variables.conf
@@ -20,9 +20,11 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 5
-    gaps_out = 20
+    #gaps_in = 5
+    #gaps_out = 20
+    # Gaps are defined in the AGS config.
     border_size = 0
+    # Border is alsod defined in the AGS config.
     #col.active_border = 
     #col.inactive_border = 
 
@@ -43,7 +45,8 @@ cursor {
 
 decoration {
 
-    rounding = 10
+    # Rounding is defined in the AGS config.
+    #rounding = 10
 
     # Set opacity settings
     active_opacity = 0.90
